--- a/package.json
+++ b/package.json
@@ -13,15 +13,29 @@
   "bugs": {
     "url": "https://github.com/adrianba/github-tracker/issues"
   },
+  "engines": {
+    "node": ">=5.9.0"
+  },
   "homepage": "https://github.com/adrianba/github-tracker#readme",
   "devDependencies": {
+    "axios": "^0.10.0",
     "babel-core": "^6.7.7",
     "babel-loader": "^6.2.4",
+    "babel-plugin-transform-runtime": "^6.7.5",
+    "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "html-webpack-plugin": "^2.16.0",
+    "marked": "^0.3.5",
+    "react": "^15.0.1",
+    "react-bootstrap": "^0.29.2",
+    "react-dom": "^15.0.1",
     "webpack": "^1.13.0"
   },
   "dependencies": {
-    "express": "^4.13.4"
+    "body-parser": "^1.15.0",
+    "express": "^4.13.4",
+    "github4": "^0.6.0",
+    "lowdb": "^0.12.5",
+    "node-cache": "^3.2.1"
   }
 }
