--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   },
   "dependencies": {
     "body-parser": "^1.15.0",
+    "documentdb": "^1.6.0",
     "express": "^4.13.4",
     "github4": "^0.6.0",
     "lowdb": "^0.12.5",
