--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "body-parser": "^1.15.0",
     "documentdb": "^1.6.0",
     "express": "^4.13.4",
+    "express-cache-response-directive": "^1.0.0",
     "github4": "^0.6.0",
     "lowdb": "^0.12.5",
     "node-cache": "^3.2.1"
