--- a/package.json
+++ b/package.json
@@ -19,21 +19,22 @@
   "homepage": "https://github.com/adrianba/github-tracker#readme",
   "devDependencies": {
     "axios": "^0.10.0",
-    "babel-core": "^6.7.7",
+    "babel-core": "^6.8.0",
     "babel-loader": "^6.2.4",
-    "babel-plugin-transform-runtime": "^6.7.5",
+    "babel-plugin-transform-runtime": "^6.8.0",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
-    "html-webpack-plugin": "^2.16.0",
+    "html-webpack-plugin": "^2.16.1",
     "marked": "^0.3.5",
-    "react": "^15.0.1",
-    "react-bootstrap": "^0.29.2",
-    "react-dom": "^15.0.1",
+    "react": "^15.0.2",
+    "react-addons-perf": "^15.0.2",
+    "react-bootstrap": "^0.29.3",
+    "react-dom": "^15.0.2",
     "webpack": "^1.13.0"
   },
   "dependencies": {
-    "body-parser": "^1.15.0",
-    "documentdb": "^1.6.0",
+    "body-parser": "^1.15.1",
+    "documentdb": "^1.7.0",
     "express": "^4.13.4",
     "express-cache-response-directive": "^1.0.0",
     "github4": "^0.6.0",
