--- a/package.json
+++ b/package.json
@@ -33,6 +33,9 @@
     "react-addons-perf": "^15.0.2",
     "react-bootstrap": "^0.29.3",
     "react-dom": "^15.0.2",
+    "react-redux": "^4.4.5",
+    "redux": "^3.5.2",
+    "redux-thunk": "^2.1.0",
     "webpack": "^1.13.0"
   },
   "dependencies": {
